force-app/main/default/objects/PH_Daily_Txn_Stat__c/fields/Avg_Soql_Count__c.field-meta.xml
<CustomField>
    <fullName>Avg_Soql_Count__c</fullName>
    <label>Avg SOQL Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>1</scale>
</CustomField>