force-app/main/default/objects/PH_Daily_Txn_Stat__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>