force-app/main/default/objects/PH_Daily_Txn_Stat__c/fields/P95_Cpu_Ms__c.field-meta.xml
<CustomField>
    <fullName>P95_Cpu_Ms__c</fullName>
    <label>P95 CPU (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>1</scale>
</CustomField>