force-app/main/default/objects/PH_Daily_Txn_Stat__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>